--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,41 @@
                 android:text="Bien Dá"
                 android:textSize="20sp" />
 
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
+
+                <Button
+                    android:id="@+id/BotonResta1"
+                    style="@android:style/Widget.Material.Button.Toggle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:background="#4d1b71b0"
+                    android:text="-1"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toStartOf="@+id/BotonSuma1"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <Button
+                    android:id="@+id/BotonSuma1"
+                    style="@android:style/Widget.Material.Button.Toggle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:background="#4d1b71b0"
+                    android:text="+1"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toEndOf="@+id/BotonResta1" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <!--
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -154,7 +189,7 @@
                     android:textSize="20sp" />
 
             </LinearLayout>
-
+            -->
 
         </LinearLayout>
 
@@ -262,37 +297,38 @@
                 android:text="Bien Dá"
                 android:textSize="20sp" />
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:orientation="horizontal">
+                android:layout_marginTop="5dp">
 
                 <Button
                     android:id="@+id/BotonResta2"
                     style="@android:style/Widget.Material.Button.Toggle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginEnd="8dp"
                     android:background="#4d1b71b0"
                     android:text="-1"
-                    android:textSize="20sp" />
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toStartOf="@+id/BotonSuma2"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <Button
                     android:id="@+id/BotonSuma2"
                     style="@android:style/Widget.Material.Button.Toggle"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginStart="8dp"
                     android:background="#4d1b71b0"
                     android:text="+1"
-                    android:textSize="20sp" />
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/BotonResta2" />
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </LinearLayout>
